--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.9",
     "babel-plugin-styled-components": "^2.1.4",
     "framer-motion": "^11.15.0",
+    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.4",
+    "nookies": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
